Refactor the stream helpers to have something coherent